--- a/src/Components/Tarjetas/Tarjeta/tarjeta.css
+++ b/src/Components/Tarjetas/Tarjeta/tarjeta.css
@@ -1,4 +1,4 @@
-.contenedor-tarjeta{
+.contenedor-tarjeta-columnas{
     display: flex;
     flex-direction: column;
     background-color: aqua;
@@ -7,3 +7,26 @@
     width: 20%;
 }
 
+.contenedor-tarjeta-columna{
+    display: flex;
+    flex-direction: row;
+    background-color: aqua;
+    padding: 10px;
+    margin-bottom: 20px;
+
+}
+
+.contenedor-tarjeta-columna img{
+    padding-right: 10px;
+}
+
+.fila{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 40px;
+}
+
+.contenedor-tarjeta:hover{
+    box-shadow: 0rem 0rem 10px 8px rgb(58 59 69 / 25%);
+}
