--- a/src/Components/Tarjetas/Tarjeta/tarjeta.css
+++ b/src/Components/Tarjetas/Tarjeta/tarjeta.css
@@ -27,6 +27,10 @@
     padding-left: 40px;
 }
 
-.contenedor-tarjeta:hover{
+.contenedor-tarjeta-columnas:hover{
+    box-shadow: 0rem 0rem 10px 8px rgb(58 59 69 / 25%);
+}
+
+.contenedor-tarjeta-columna:hover{
     box-shadow: 0rem 0rem 10px 8px rgb(58 59 69 / 25%);
 }
