--- a/src/Components/Tarjetas/tarjetas.css
+++ b/src/Components/Tarjetas/tarjetas.css
@@ -18,7 +18,13 @@
     justify-content: space-between;
     padding: 0px 20px;
 }
-
+section{
+    display: flex;
+    flex-direction: row;
+    width: 40%;
+    height: 100%;
+    justify-content: end;
+}
 
 
 
