--- a/src/Components/Tarjetas/Tarjeta/tarjeta.css
+++ b/src/Components/Tarjetas/Tarjeta/tarjeta.css
@@ -9,6 +9,7 @@
 
 .contenedor-tarjeta-columna{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     background-color: rgb(155, 255, 255);
     padding: 10px;
@@ -18,13 +19,15 @@
 
 .contenedor-tarjeta-columna img{
     padding-right: 10px;
+    align-self: flex-start;
 }
 
 .fila{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    flex-wrap: wrap;
     padding-left: 40px;
+    min-width: 190px;
 }
 
 .contenedor-tarjeta-columnas:hover{
@@ -41,3 +44,19 @@
     padding-bottom: 20px;
 }
 
+.botones{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.borrar1{
+    width: 85px;
+    height: 21px;
+    margin-bottom: 10px;
+}
+
+.borrar2{
+    width: 85px;
+    height: 21px;
+}
