--- a/src/Components/Tarjetas/tarjetas.css
+++ b/src/Components/Tarjetas/tarjetas.css
@@ -1,4 +1,4 @@
-@media (max-width: 2560px) {
+@media (max-width: 2560px) { /*4K*/
 .tarjetasColumnas{
     display: flex;
     flex-direction: row;
@@ -27,7 +27,19 @@
     justify-content: end;
 }
 }
-@media (max-width: 320px) {
+@media (max-width: 768px){ /*tablet*/
+    .contenedor-tarjeta-columnas {
+        padding: 1%;
+        width: 30%;
+    }
+    .contenedor-tarjeta-columna{
+        padding: 1%;
+    }
+
+    
+}
+
+@media (max-width: 320px) {/*Mobile S*/
     .buscador{
         padding: 5px;
     }
@@ -36,9 +48,6 @@
         height: 100%;
     }
     .contenedor-tarjeta-columnas {
-        
-        width: 100%;
+        width: 40%;
     }
 }
-
-
