--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -13,9 +13,18 @@ footer{
     padding-right: 5%;
     
 }
-@media (max-width: 320px) {
+@media (max-width: 2560px) {
+    .team{
+        width: 15%;
+    }
+}
+@media (max-width: 768px) {
+    .team{
+        width: 25%;
+    }
+}
+@media (max-width: 426px) {
     .team{
         width: 50%;
-        padding-right: 5%;
     }
 }
